Change title from 'Dictator Radar' to 'Dark Flights'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dictator Radar | Global Surveillance</title>
+    <title>Dark Flights</title>
     
     <!-- Leaflet CSS & JS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
@@ -44,7 +44,7 @@
 <body>
 
     <div id="hud">
-        <h1>DICTATOR RADAR</h1>
+        <h1>Dark Flights</h1>
         <div id="stats">Scanning...</div>
         <hr style="border-color: #0f0; opacity: 0.3;">
         <strong>FILTERS:</strong>
